--- a/content-org/blog/en/_andropedros-pistoleros-rhinoceros.org
+++ b/content-org/blog/en/_andropedros-pistoleros-rhinoceros.org
@@ -1,3 +1,4 @@
 #+title: Andropedros Pistoleros Rhinoceros
-#+hugo_section: blog-en
+#+hugo_section: blog-drafts
+#+draft: true
 #+author: Anton Kotenko
