--- a/content-org/blog/ru/_js_article_drafts.org
+++ b/content-org/blog/ru/_js_article_drafts.org
@@ -1,5 +1,6 @@
 #+title: JS Article Drafts
-#+hugo_section: blog/drafts
+#+hugo_section: blog-drafts
+#+draft: true
 
 #+BEGIN_SRC javascript
 function Y(f) { return ( (function (x) { return f(function (v) { return
