--- a/content-org/blog/ru/Plan.org
+++ b/content-org/blog/ru/Plan.org
@@ -1,5 +1,6 @@
 #+title: Plan
-#+hugo_section: blog/plan
+#+hugo_section: blog-drafts
+#+draft: true
 
 - pegjs / markdown.pegjs- mvp4g-layouting as a separate jar
 - Rhino in Android- JavaScript modules pattern
