--- a/content-org/blog/ru/_javascript-not-lose-the-way.org
+++ b/content-org/blog/ru/_javascript-not-lose-the-way.org
@@ -1,7 +1,8 @@
 #+title: JavaScript — как не оступиться. Пара фокусов.
 #+publishDate: <2012-11-16T11:55>
 #+tags: javascript
-#+hugo_section: blog/drafts
+#+hugo_section: blog-drafts
+#+draft: true
 
 JavaScript --- How not to Stumble. Few Tricks.
 
