new additions to CV / Music & rename to resove ambiguity

--- a/Org/CV (ORG).org
+++ b/Org/CV (ORG).org
@@ -6,12 +6,17 @@
   - [[https://shamansir.github.io][Website]]: https://shamansir.github.io
   - Birthday: 4 March 1984
 
+soc
+
 Starting from 2003, I work as a FrontEnd & Software Developer, but that's since even earlier I discovered that developing user interfaces or quite anything visual and interactive, is my passion.
 I often preferred programming to gaming or watching TV or going outside (not to the extent, though, or else how would I find friends?).
+
 It is thanks to this feeling of discovering something new and creating something new from the small little logical and mathematical parts, making something beautiful, appealing, friendly, and useful.
+
 So during my work experience I developed many complex components, such as Treemap (or BinPacking) component for monitoring stocks implemented in Delphi, or the interface for Fast Fourier analysis of seismic signal in Borland C++,
 or the UI for first neural networks with no more than a dozen layers of neurons, or else your PC take weeks to compute them, then using now-forgotten protocols (e.g. Google Wave aka Federation One) for delivering immersive and friendly chat experience, then it would be JavaScript player for web animation tool Animatron,
 and through years it got me into developing generative art with functional programming languages in JetBrains for marketing purposes, so that design team wouldn't be required to manually produce all the variants of art, but just to overlook and rule the generation process.
+
 From all this it could look like I loved mathematics all the way, but at the start I really didn't, and only now I find its laws everywhere around, including music, geometry, or theorem proving.
 
 
@@ -23,9 +28,11 @@ From all this it could look like I loved mathematics all the way, but at the sta
 May 2016 — August 2024
 
 In JetBrains, I mostly worked in Computational Arts Initiative, which is the team we formed by accident with the designer Serg Golovachev, with whom we've met while working in Animatron.
+
 The purpose of the team is helping designers get rid of the repetitive tasks where marketing requires tons of variations of the same approaches. The technologies differed vastly between projects and years, always it was something with the Web Frontend though.
 If you ever used JetBrains IDEs then you there's a chance seen the splash screens produced by us or our folks from the CAI team, after the approve or even polishing by the Design Team, of course, or may be a background of some YouTube video telling your about Tips & Tricks in those IDEs.
 You can visit and try web versions of the generators yourself if you follow the link to the CAI below.
+
 Aside from that, I was doing FrontEnd development for jetbrains.com website, some landing pages, or for example, some years of Developers Survey (2017 & 2018) are produced by yours FrontEnd Team representative in collaboration with designers.
 
 
@@ -80,7 +87,9 @@ Project, related to the sea machinery documentation. Just one month, so almost n
 
 June 2007 — June 2009
 
-In FotoNation, we developed photo sharing service for Nikon, one of the very first of its kind. At that time, Nikon had released their first Photo Cameras with Wi-Fi support. I worked in the UI Team, responsible both for Java & JavaScript on the FrontEnd, the hardest were the Gallery page and the individual Photo viewer, like including Drag & Drop of images from the file system while there were almost no solutions for it at the time, beating Time Zones and other challenges. Action System for the UI was the idea and implementation of ours since technologies we used provided no friendly and easy approach. // Development with Apache Wicket + JavaScript ‐ complex native‐JS+Java components and layouting scripts + action system, UI prototypes using JQuery. Components/Layouts are dynamically communicate with server‐side/Database.
+In FotoNation, we developed photo sharing service for Nikon, one of the very first of its kind. At that time, Nikon had released their first Photo Cameras with Wi-Fi support. I worked in the UI Team, responsible both for Java & JavaScript on the FrontEnd, the hardest were the Gallery page and the individual Photo viewer, like including Drag & Drop of images from the file system while there were almost no solutions for it at the time, beating Time Zones and other challenges.
+
+Action System for the UI was the idea and implementation of ours since technologies we used provided no friendly and easy approach. // Development with Apache Wicket + JavaScript ‐ complex native‐JS+Java components and layouting scripts + action system, UI prototypes using JQuery. Components/Layouts are dynamically communicate with server‐side/Database.
 
   - /St. Petersburg/, /Russia/ 
 
@@ -348,4 +357,701 @@ The huge (but as fun as possible) talk in three parts on how you could architect
   - [[https://vimeo.com/26357352][Video, p.1/3]]  (RU)
   - [[https://vimeo.com/26413549][Video, p.2/3]]  (RU)
   - [[https://vimeo.com/26715073][Video, p.3/3]]  (RU)
+
+** Projects
+
+*Noodle*
+
+Visual Programming for producing Generative Art and more, with CLI & Web & VR (planned) frot-ends, written in PureScript
+
+/Status:/ Almost Finished (at least looks like it)
+
+/Started:/ more than five years ago
+
+([[https://github.com/shamansir/noodle][GH:noodle]], [[https://noodle.labs.jb.gg/][Last working Noodle Demo]])
+
+#purescript, #visual-programming, #functional-programming, #generative-art
+
+
+*RPD*
+
+Visual Programming for Generative Art, in JavaScript, driven by Reactive Streams Programming
+
+/Status:/ Finished (to some point)
+
+/Started:/ more than ten years ago
+
+([[https://github.com/shamansir/rpd][GH:rpd]], [[https://shamansir.github.io/rpd][RPD Docs & Demos]])
+
+#javascript, #svg, #visual-programming, #generative-art, #reactive-programming, #kefir.js, #computational-arts
+
+
+*Tron GUI*
+
+Innovative approach for generative art User Interfaces: now grid-based
+
+/Status:/ Finished (to some point)
+
+/Started:/ around two-three years ago
+
+([[https://github.com/shamansir/tron-gui][GH:tron-gui]], [[https://tron.labs.jb.gg/][Tron Constructor @ CAI]], [[https://cai.jetbrains.com/][Computational Arts Initiative]], [[https://tiler.labs.jb.gg/][Tiler @ CAI usage example]], [[https://neobeam.labs.jb.gg/][Neobeam @ CAI usage example]], [[https://plasmatic.labs.jb.gg/][Plasmatic @ CAI usage example]])
+
+#elm, #gui, #user-interface, #functional-programming, #dhall, #javascript, #generative-art, #computational-arts, #graphs
+
+
+*Kvant*
+
+Translating Wave Function Collapse algorithm to Elm, and UI for it
+
+/Status:/ Stagnated (started, may be accomplished smth, but wasn't finished for a long time)
+
+/Started:/ around four-five years ago
+
+([[https://github.com/shamansir/kvant][GH:kvant]], [[https://kvant.labs.jb.gg/][Kvant Demo @ CAI]], [[https://cai.jetbrains.com/][Computational Arts Initiative]])
+
+#elm, #gui, #generative-art, #functional-programming, #computational-arts
+
+
+*iElm*
+
+Interactive Visual REPL for Elm language, showing types and SVG and even `elm-canvas` Graphics
+
+/Status:/ Finished (to some point)
+
+/Started:/ around four-five years ago
+
+([[https://github.com/shamansir/ielm][GH:ielm]])
+
+#elm, #repl, #functional-programming
+
+
+*node-elm-repl*
+
+CLI client for iElm to get the information about the type of the entered expression
+
+/Status:/ Finished (to some point)
+
+/Started:/ around four-five years ago
+
+([[https://github.com/shamansir/node-elm-repl][GH:node-elm-repl]])
+
+#elm, #javasript, #binary, #repl, #functional-programming
+
+
+*purescript-blessed*
+
+Port of JavaScript Blessed library, which is the powerful window management and component library for Command-Line-interfaces (CLI)
+
+/Status:/ Almost Finished (at least looks like it) (Library)
+
+/Started:/ during last year
+
+([[https://github.com/shamansir/purescript-blessed][GH:purescript-blessed]])
+
+#cli, #functional-programming, #purescript, #user-interface, #components
+
+
+*Purs-Typeclasses*
+
+The auto-generated interactive SVG poster / Web App of the PureScript TypeClasses' structure and methods and dependencies
+
+/Status:/ Finished (to some point)
+
+/Started:/ around two-three years ago
+
+([[https://github.com/shamansir/purescript-typeclasses][GH:purescript-typeclasses]])
+
+#functional-programming, #purescript, #svg
+
+
+*WinniPeg*
+
+Try to implement parsing from PEG grammars in PureScript
+
+/Status:/ Just Started
+
+/Started:/ during last year
+
+([[https://github.com/shamansir/winni-peg][GH:winni-peg]])
+
+#functional-programming, #purescript, #org-mode, #peg, #grammars, #parsing
+
+
+*&ndORG*
+
+An attempt to develop a user-friendly web ORG-mode editor while conversing most of its `emacs` profits and build UI on visual-keystrokes-concept
+
+/Status:/ Draft
+
+/Started:/ during last year
+
+([[https://github.com/shamansir/ndorg][GH:ndorg]])
+
+#functional-programming, #purescript, #org-mode, #grammars, #parsing
+
+
+*GEN UI Lang*
+
+On storing UI components definitions for Generative Art in JSON or D-Hall format, for Tron GUI mostly
+
+/Status:/ Stagnated (started, may be accomplished smth, but wasn't finished for a long time)
+
+/Started:/ around two-three years ago
+
+([[https://github.com/shamansir/gen-ui][GH:gen-ui]])
+
+#elm, #dhall, #gui, #functional-programming, #computational-arts
+
+
+*JS Player for Animatron*
+
+
+
+/Status:/ Finished (to some point)
+
+/Started:/ more than five years ago
+
+([[https://github.com/shamansir/animatron-player][GH:animatron-player]])
+
+#javascript, #canvas, #animation
+
+
+*Web PD: PureData for Web*
+
+
+
+/Status:/ Stagnated (started, may be accomplished smth, but wasn't finished for a long time)
+
+/Started:/ more than five years ago
+
+([[https://github.com/shamansir/web-pd][GH:web-pd]])
+
+#javascript, #pure-data, #svg, #audio-generation, #visual-programming
+
+
+*JetBrains Splash Screen Generator, with RPD*
+
+
+
+/Status:/ Finished (to some point)
+
+/Started:/ more than five years ago
+
+([[https://github.com/shamansir/jb-rpd-splash][GH:jb-rpd-splash]], [[https://seti.labs.jb.gg/][SETI Generator in Action @ CAI]], [[https://cai.jetbrains.com/][Computational Arts Initiative]])
+
+#javascript, #visual-programming, #computational-arts, #glsl, #shaders
+
+
+*sametimed*
+
+The Chat with Friedly-UI based on Google Federation One (a.k.a. Google Wave) protocol
+
+/Status:/ Finished (to some point)
+
+/Started:/ more than ten years ago
+
+([[https://github.com/shamansir/sametimed][GH:sametimed]])
+
+#java, #google-wave
+
+
+*nijiato*
+
+Finger-recognition in LISP with OpenCV
+
+/Status:/ Finished (to some point)
+
+/Started:/ more than ten years ago
+
+([[https://github.com/shamansir/nijiato][GH:nijiato]])
+
+#lisp, #camera-tracking, #opencv
+
+
+*My TouchDesigner VJing sources*
+
+
+
+/Status:/ Finished (to some point)
+
+/Started:/ around two-three years ago
+
+([[https://github.com/shamansir/touchdesigner][GH:touchdesigner]])
+
+#touchdesigner, #visuals
+
+
+*Open Radiant*
+
+One of the first art generators for JetBrains
+
+/Status:/ Finished (to some point)
+
+/Started:/ around four-five years ago
+
+([[https://github.com/shamansir/open-radiant][GH:open-radiant]], [[https://cai.jetbrains.com/][Computational Arts Initiative]])
+
+#elm, #functional-programming, #computational-arts, #generative-art
+
+
+*Open Elmsfeuer*
+
+Another one of the first art generators for JetBrains
+
+/Status:/ Finished (to some point)
+
+/Started:/ around four-five years ago
+
+([[https://github.com/shamansir/open-elmsfeuer][GH:open-elmsfeuer]], [[https://origami.labs.jb.gg/][Origami Generator in Action @ CAI]])
+
+#elm, #functional-programming, #computational-arts, #generative-art
+
+
+*PegJS - FN*
+
+The concept of functional PEG-driven parsers for JavaScript where every grammar rule is represented with a single pure function
+
+/Status:/ Finished (to some point)
+
+/Started:/ more than five years ago
+
+([[https://github.com/shamansir/pegjs-fn][GH:pegjs-fn]], [[https://shamansir.github.io/pegjs-fn/][PegJS-Fn Playground]])
+
+#javascript, #functional-programming, #parsing, #grammar
+
+
+*JavaScript Gardern*
+
+
+
+/Status:/ Finished (to some point)
+
+/Started:/ more than ten years ago
+
+([[https://github.com/shamansir/javascript-garden][GH:javascript-garden]])
+
+#javascript, #translation
+
+
+*Japanese Language Reference in Russian*
+
+(PDF, 300+ pages)
+
+/Status:/ Finished (to some point)
+
+/Started:/ more than 20 years ago
+
+
+
+#japanese, #pdf, #translation
+
+
+*Python 3.5 (RU)*
+
+Translating Python 3.5 Reference @ Wikibooks
+
+/Status:/ Finished (to some point)
+
+/Started:/ more than 15 years ago
+
+
+
+#python, #translation
+
+
+*PDF version for how-to-livecode Book*
+
+Laying out PDF for how-to-livecode book
+
+/Status:/ Finished (to some point)
+
+/Started:/ more than five years ago
+
+
+
+#pdf, #generative-audio
+
+
+*purescript-doc*
+
+
+
+/Status:/ Almost Finished (at least looks like it) (Library)
+
+/Started:/ during last year
+
+([[https://github.com/shamansir/purescript-doc][GH:purescript-doc]])
+
+#functional-programming, #purescript, #org-mode, #markdown
+
+
+*purescript-org*
+
+
+
+/Status:/ In progress (Library)
+
+/Started:/ during last year
+
+([[https://github.com/shamansir/purescript-org][GH:purescript-org]])
+
+#functional-programming, #purescript, #org-mode
+
+
+*purescript-grammar*
+
+
+
+/Status:/ In progress (Library)
+
+/Started:/ during last year
+
+([[https://github.com/shamansir/purescript-grammar][GH:purescript-grammar]])
+
+#functional-programming, #purescript, #grammar, #parsing
+
+
+*purescript-flex-layout*
+
+
+
+/Status:/ In progress (Library)
+
+/Started:/ around two-three years ago
+
+([[https://github.com/shamansir/purescript-flex-layout][GH:purescript-flex-layout]])
+
+#functional-programming, #purescript, #bin-packing, #user-interface
+
+
+*Finite State Machine engine+example for PureScript*
+
+
+
+/Status:/ Finished (to some point) (Library)
+
+/Started:/ around two-three years ago
+
+([[https://github.com/shamansir/purescript-fsm][GH:purescript-fsm]])
+
+#functional-programming, #purescript, #user-interface
+
+
+*purescript-optics-interactive*
+
+
+
+/Status:/ Draft
+
+/Started:/ around two-three years ago
+
+([[https://github.com/shamansir/purescript-optics-interactive][GH:purescript-optics-interactive]])
+
+#functional-programming, #purescript
+
+
+*purescript-yoga-tree-utils*
+
+
+
+/Status:/ Finished (to some point) (Library)
+
+/Started:/ during last year
+
+([[https://github.com/shamansir/purescript-yoga-tree-utils][GH:purescript-yoga-tree-utils]])
+
+#functional-programming, #purescript, #org-mode
+
+
+*purescript-mahjong*
+
+
+
+/Status:/ Draft
+
+/Started:/ around one-two years ago
+
+([[https://github.com/shamansir/purescript-mahjong][GH:purescript-mahjong]])
+
+#functional-programming, #purescript, #mahjong, #game
+
+
+*PrimCivile*
+
+
+
+/Status:/ Draft
+
+/Started:/ around two-three years ago
+
+([[https://github.com/shamansir/primcivile][GH:primcivile]])
+
+#purescript, #functional-programming, #game
+
+
+*Elm Symbolic Logic Game*
+
+
+
+/Status:/ Stagnated (started, may be accomplished smth, but wasn't finished for a long time)
+
+/Started:/ around two-three years ago
+
+([[https://github.com/shamansir/elm-symbolic-logic][GH:elm-symbolic-logic]])
+
+#elm, #logic, #lewis-carrol, #game
+
+
+*Cayley Rust*
+
+
+
+/Status:/ Stagnated (started, may be accomplished smth, but wasn't finished for a long time) (Library)
+
+/Started:/ more than ten years ago
+
+([[https://github.com/shamansir/cayley-rust][GH:cayley-rust]])
+
+#rust, #graphs, #database
+
+
+*Vimeoid*
+
+
+
+/Status:/ Stagnated (started, may be accomplished smth, but wasn't finished for a long time)
+
+/Started:/ more than ten years ago
+
+([[https://github.com/shamansir/vimeoid][GH:vimeoid]])
+
+#android, #java, #application
+
+
+*NodeJS Binary Parser*
+
+
+
+/Started:/ more than ten years ago
+
+([[https://github.com/shamansir/nodejs-binary-parser][GH:nodejs-binary-parser]])
+
+
+*Elm Goose Driven Tutorial*
+
+
+
+/Started:/ around four-five years ago
+
+([[https://github.com/shamansir/elm-goose-driven-tutorial][GH:elm-goose-driven-tutorial]])
+
+
+*Showdown Blog*
+
+Blog engine driven by JavaScript + XSLT
+
+/Started:/ more than ten years ago
+
+([[https://github.com/shamansir/showdown-blog][GH:showdown-blog]])
+
+
+*Мюнхен-Флю*
+
+
+
+/Started:/ more than five years ago
+
+
+
+
+*Лё Баналь*
+
+
+
+/Started:/ around four-five years ago
+
+
+
+
+*Translation for Duke Nukem 3D Build Engine Tutorial*
+
+
+
+/Started:/ more than 20 years ago
+
+
+
+
+*The Neverhood Walhthrough*
+
+
+
+/Started:/ more than 20 years ago
+
+
+
+
+*Transit Maps*
+
+
+
+/Started:/ more than five years ago
+
+([[https://github.com/shamansir/transit-maps][GH:transit-maps]])
+
+
+*LEAN Train*
+
+
+
+/Started:/ during last year
+
+([[https://github.com/shamansir/lean-train][GH:lean-train]])
+
+
+*Elm Fluxus*
+
+
+
+/Started:/ more than five years ago
+
+([[https://github.com/shamansir/elm-fluxus][GH:elm-fluxus]])
+
+
+*Elm Graph Render*
+
+
+
+/Started:/ around two-three years ago
+
+([[https://github.com/shamansir/elm-graph-render][GH:elm-graph-render]])
+
+
+*elm-bin-pack*
+
+
+
+/Started:/ around two-three years ago
+
+([[https://github.com/shamansir/elm-bin-pack][GH:elm-bin-pack]])
+
+
+*Forster*
+
+
+
+/Started:/ more than five years ago
+
+([[https://github.com/shamansir/forster][GH:forster]])
+
+
+*Dat Org Editor*
+
+
+
+([[https://github.com/shamansir/dat-org-editor][GH:dat-org-editor]])
+
+
+*Elm-Graph-Render*
+
+
+
+([[https://github.com/shamansir/elm-graph-render][GH:elm-graph-render]])
+
+
+*Exercism*
+
+
+
+/Started:/ more than five years ago
+
+([[https://github.com/shamansir/exercism][GH:exercism]])
+
+
+*Elm-Friendly-Parser*
+
+
+
+([[https://github.com/shamansir/elm-friendly-parser][GH:elm-friendly-parser]])
+
+
+*Track-Me-I-Am-Famous*
+
+
+
+([[https://github.com/shamansir/track-me-i-am-famous][GH:track-me-i-am-famous]])
+
+
+*Elm-Ohm-Grammar*
+
+
+
+([[https://github.com/shamansir/elm-ohm-grammar][GH:elm-ohm-grammar]])
+
+
+*RPD-P5-Particle-System*
+
+
+
+([[https://github.com/shamansir/rpd-p5-particle-system][GH:rpd-p5-particle-system]])
+
+
+*RPD-PureData*
+
+
+
+/Started:/ more than five years ago
+
+([[https://github.com/shamansir/rpd-puredata][GH:rpd-puredata]])
+
+
+*Showdown-Blog*
+
+
+
+([[https://github.com/shamansir/showdown-blog][GH:showdown-blog]])
+
+
+*Mdown-Parse-PegJS*
+
+
+
+([[https://github.com/shamansir/mdown-parse-pegjs][GH:mdown-parse-pegjs]])
+
+
+*XTD (forall-TD)*
+
+
+
+([[https://github.com/shamansir/xtd][GH:xtd]])
+
+
+*GWT-mvp4-layouting-demo*
+
+
+
+([[https://github.com/shamansir/gwt-mvp4-layouting-demo][GH:gwt-mvp4-layouting-demo]])
+
+
+*Fluxus-music-demo-addconf*
+
+
+
+([[https://github.com/shamansir/fluxus-music-demo-addconf][GH:fluxus-music-demo-addconf]])
+
+
+*Cometd-Demo*
+
+
+
+/Started:/ more than 15 years ago
+
+([[https://github.com/shamansir/cometd-demo][GH:cometd-demo]])
+
+
+*Corsika-Visualization*
+
+
+
+([[https://github.com/shamansir/corsika-visualization][GH:corsika-visualization]])
 
